--- a/gym.css
+++ b/gym.css
@@ -5,6 +5,11 @@ body {
   overflow-x: hidden;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+
 body::before {
   content: "";
   position: fixed;
@@ -288,14 +293,8 @@ body.no-bg::after {
 }
 
 /* Sticky Header */
-header.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.95);
-  z-index: 999;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
-}
+
+
 
 /* Scroll Progress Bar */
 #scrollProgress {
@@ -390,18 +389,13 @@ header.sticky {
   flex-direction: column;
   padding: 20px;
   background: linear-gradient(135deg, #001260, #061a22, #020617);
-  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
   border-radius: 15px;
+  overflow: hidden;
 }
 
-.train-card:hover {
-  transform: translateY(-10px) scale(1.03);
-  background: linear-gradient(135deg, #020617, #0b1c2d, #1e1b4b);
-  box-shadow:
-    0 20px 40px rgba(242, 246, 7, 0.25),
-    0 0 40px rgba(99, 102, 241, 0.4);
-  cursor: pointer;
-}
+
 
 .card-title{
   text-align: center;
@@ -448,10 +442,12 @@ header.sticky {
   gap: 30px;
   padding: 30px;
   background: linear-gradient(135deg, #001260, #061a22, #020617);
-  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
   border-radius: 15px;
   padding: 20px;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 .testi-title{
@@ -473,6 +469,7 @@ header.sticky {
 
 
 .location-container{
+  overflow: hidden;
   margin-top: 20px;
   box-shadow:
     0 0px 40px rgba(242, 246, 7, 0.25),
@@ -551,15 +548,10 @@ header.sticky {
   height: 400px;
 }
 
-.iframe:hover{
-  transform: translateY(-4px) scale(1.05);
-  box-shadow:
-    0 0 20px rgba(56, 189, 248, 0.9),
-    0 0 40px rgba(14, 165, 233, 0.8);
 
-}
 
 .copyright-container{
+  overflow: hidden;
   margin-top: 20px;
   box-shadow:
     0 0px 40px rgba(242, 246, 7, 0.25),
@@ -625,6 +617,7 @@ header.sticky {
 }
 
 .story-container{
+  overflow: hidden;
   margin-top: 20px;
   box-shadow:
     0 0px 40px rgba(242, 246, 7, 0.25),
@@ -687,14 +680,14 @@ header.sticky {
 }
 
 .gallery-card{
-
-  width: 300px;
+  min-height: 300px;
+  overflow: hidden;
+  max-width: 700px;
   border-radius: 15px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   justify-content: space-between;
@@ -797,10 +790,12 @@ header.sticky {
 
 .mission-vision-card{
   padding: 20px;
-  width: 100%;
+  min-width:  100%;
+  max-width: 100%;
   background: linear-gradient(135deg, #6581fd, #061a22, #020617);
   border-radius: 15px;
   margin-bottom: 10px;
+  overflow: hidden;
 }
 
 .mission-vision-title{
@@ -817,6 +812,7 @@ header.sticky {
 }
 
 .about-values{
+  overflow: hidden;
   margin-top: 20px;
   box-shadow:
     0 0px 40px rgba(242, 246, 7, 0.25),
@@ -853,15 +849,7 @@ header.sticky {
   font-weight: bolder;
 }
 
-.values-list li:hover {
-  cursor: pointer;
-  transform: translateY(-6px) scale(1.02);
-  filter: brightness(1.15) saturate(1.2);
-  box-shadow:
-    0 0 12px rgba(56, 189, 248, 0.6),
-    0 0 30px rgba(99, 102, 241, 0.8),
-    0 0 60px rgba(56, 189, 248, 0.6);
-}
+
 
 .about-why-container{
  margin-top: 20px;
@@ -886,23 +874,17 @@ header.sticky {
 .about-why-card{
   padding: 10px;
   width: 100%;
+  max-width: 100%;
   background: linear-gradient(135deg, #0f38f0, #061a22, #020617);
   display: flex;
   flex-direction: column;
   gap:20px;
   margin-bottom: 20px;
   border-radius: 15px;
+  overflow: hidden;
 }
 
-.about-why-card:hover {
-  cursor: pointer;
-  transform: translateY(-6px) scale(1.02);
-  filter: brightness(1.15) saturate(1.2);
-  box-shadow:
-    0 0 12px rgba(234, 255, 0, 0.6),
-    0 0 30px rgba(99, 102, 241, 0.8),
-    0 0 60px rgba(56, 189, 248, 0.6);
-}
+
 
 .about-why-content-title{
   text-align: center;
@@ -943,9 +925,11 @@ header.sticky {
 .stat-box{
   background: linear-gradient(135deg, #0e38f4, #061a22, #020617);;
   width: 200px;
+  max-width: 200px;
   height: 200px;
+  max-height: 200px;
   border-radius: 15px;
-   margin: 20px auto 0;
+  margin: 20px auto 0;
 }
 
 .stat-box h2{
@@ -959,18 +943,6 @@ header.sticky {
   font-size: 25px;
   color:  #E5E7EB;
 
-}
-
-.stat-box:hover {
-  cursor: pointer;
-  transform: translateY(-10px) scale(1.02);
-  filter: brightness(1.15) saturate(1.2);
-  width: 220px;
-  box-shadow:
-    0 0 12px rgba(234, 255, 0, 0.6),
-    0 0 30px rgba(99, 102, 241, 0.8),
-    0 0 60px rgba(56, 189, 248, 0.6);
-    font-weight: bolder;
 }
 
 .about-cta{
@@ -1005,9 +977,12 @@ header.sticky {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 250px;
+  width: 3000px;
+  max-width: 300px;
   height: 150px;
+  max-height: 150px;
   border-radius: 15px;
+  overflow: hidden;
   margin: 20px auto 0;
   background: linear-gradient(135deg, #e8fc08, #061a22, #020617);;
 }
@@ -1016,13 +991,13 @@ header.sticky {
   cursor: pointer;
   transform: translateY(-10px) scale(1.02);
   filter: brightness(1.15) saturate(1.2);
-  width: 260px;
+  width: 300px;
   box-shadow:
     0 0 12px rgba(234, 255, 0, 0.6),
     0 0 30px rgba(99, 102, 241, 0.8),
     0 0 60px rgba(56, 189, 248, 0.6);
     font-weight: bolder;
-    text-align: center;
+ 
 }
 
 .view-box a{
@@ -1038,7 +1013,7 @@ header.sticky {
     0 0 40px rgba(99, 102, 241, 0.4),
     0 0 50px rgba(99, 102, 241, 0.4); 
   background: linear-gradient(135deg, #020617, #061a22, #020617);
- 
+  overflow: hidden;
   padding: 40px;
 }
 
@@ -1090,14 +1065,11 @@ header.sticky {
 }
 
 .social-box{
-
   padding: 20px;
-  width: 350px;
-
-  
-  width: 150px;
+  min-width: 300px;
+  overflow: hidden;
+  max-width: 300px;
   height: 100px;
-
   border-radius: 15px;
   box-shadow:
   0 0px 40px rgba(251, 255, 3, 0.25),
@@ -1105,12 +1077,11 @@ header.sticky {
   0 0 50px rgba(99, 102, 241, 0.4);
   display: flex;
   align-items: center;
-
   flex-direction: column;
   justify-content: center;
   text-align: center;
 
-  justify-content: center;
+
 
     
 }
@@ -1155,11 +1126,10 @@ header.sticky {
 
 
 .contact-card{
-
   padding: 10px;
-
-
   width: 200px;
+  max-width: 200px;
+  max-height: 200px;
   height: 200px;
   border-radius: 15px;
   flex-direction: column;
@@ -1170,6 +1140,7 @@ header.sticky {
     font-weight: bolder;
     text-align: center;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 
@@ -1216,8 +1187,6 @@ header.sticky {
 }
 
 .contact-form-container{
- 
- 
   text-align: center;
   padding: 40px;
   margin-top: 20px;
@@ -1431,6 +1400,7 @@ input, textarea, select {
 
 
 .pricing-top-container{
+  overflow: hidden;
   padding: 40px;
   margin-top: 20px;
   box-shadow:
@@ -1479,11 +1449,14 @@ input, textarea, select {
 
 .price-card{
   width: 300px;
+  max-width: 300px;
+  max-height: 300px;
+  overflow: hidden;
   height: 300px;
   border-radius: 15px;
   background: linear-gradient(135deg, #020617, #004864, #5674f7);
    position: relative;
-  overflow: hidden;
+
 
   /* Subtle floating glow */
   box-shadow:
@@ -1616,8 +1589,10 @@ input, textarea, select {
   border-radius: 15px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   width: 100%;
-  height: 300px;
+  max-width: 100%;
+  height: 200px;
   background: linear-gradient(135deg, #000d49, #061a22, #020617);
 }
 
@@ -1634,6 +1609,7 @@ input, textarea, select {
 }
 
 .cta-container-pricing{
+  overflow: hidden;
   padding: 40px;
   margin-top: 20px;
   box-shadow:
@@ -1697,8 +1673,10 @@ input, textarea, select {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 250;
+  width: 250px;
+  max-width: 250px;
   height: 100px;
+  max-height: 100px;
   padding: 20px;
   border-radius: 20px;
   background: linear-gradient(135deg, #f6f6f8, #061a22, #020617);
@@ -1744,6 +1722,7 @@ input, textarea, select {
   flex-direction: column;
   padding: 40px;
   margin-top: 20px;
+  overflow: hidden;
   box-shadow:
     0 0px 40px rgba(242, 246, 7, 0.25),
     0 0 40px rgba(99, 102, 241, 0.4),
@@ -1764,7 +1743,9 @@ input, textarea, select {
   justify-content: center;
   flex-direction: column;
   width: 350px;
+  max-width: 350px;
   height: 370px;
+  max-height: 370px;
   border-radius: 15px;
   background: linear-gradient(135deg, #f6f6f8, #061a22, #020617);
   box-shadow:
@@ -1812,13 +1793,7 @@ input, textarea, select {
 }
 
 /* Clean, premium hover */
-.big-boss-card:hover {
-  transform: translateY(-6px) scale(1.03);
-  box-shadow:
-    0 0 15px rgba(99, 102, 241, 0.6),
-    0 0 35px rgba(99, 102, 241, 0.5),
-    0 0 70px rgba(99, 102, 241, 0.4);
-}
+
 
 /* Animations */
 @keyframes floatSoft {
@@ -1844,10 +1819,11 @@ input, textarea, select {
   font-size: 30px;
   color: #E5E7EB;
   font-weight: bold;
+  margin: 0px;
 }
 
 .img-name{
-  margin: 0;
+ 
   display: flex;
   text-align: center;
   font-size: 24px;
@@ -1872,7 +1848,9 @@ input, textarea, select {
   align-items: center;
   flex-direction: column;
   width: 350px;
+  max-width: 350px;
   height: 500px;
+  max-height: 500px;
   border-radius: 15px;
   background: linear-gradient(135deg, #080800, #061a22, #020617);
   box-shadow:
@@ -1918,13 +1896,7 @@ input, textarea, select {
 }
 
 /* Clean, premium hover */
-.staff-card:hover {
-  transform: translateY(-6px) scale(1.03);
-  box-shadow:
-    0 0 15px rgba(99, 102, 241, 0.6),
-    0 0 35px rgba(99, 102, 241, 0.5),
-    0 0 70px rgba(99, 102, 241, 0.4);
-}
+
 
 /* Animations */
 @keyframes floatSoft {
@@ -1935,14 +1907,6 @@ input, textarea, select {
 @keyframes pulseSoft {
   0%, 100% { opacity: 0.4; }
   50% { opacity: 0.8; }
-}
-
-.staff-card:hover {
-  transform: translateY(-6px) scale(1.03);
-  box-shadow:
-    0 0 15px rgba(171, 245, 0, 0.6),
-    0 0 35px rgba(255, 218, 7, 0.5),
-    0 0 70px rgba(0, 0, 7, 0.4);
 }
 
 .staff-img{
@@ -1958,6 +1922,7 @@ input, textarea, select {
   font-size: 30px;
   color: #E5E7EB;
   font-weight: bold;
+  margin: 0px;
 }
 
 .staff-name{
@@ -1999,24 +1964,21 @@ input, textarea, select {
   justify-content: center;
   flex-direction: column;
   width: 400px;
+  max-width: 400px;
   height: 350px;
+  max-height: 350px;
   border-radius: 15px;
   background: linear-gradient(135deg, #003ef7, #061a22, #020617);
   box-shadow:
   0 0 12px rgba(14, 15, 0, 0.6),
   0 0 30px rgba(99, 102, 241, 0.8),
   0 0 60px rgba(55, 55, 55, 0.6);
+  overflow: hidden;
 }
 
 
 
-.barbers-card:hover {
-  transform: translateY(-6px) scale(1.03);
-  box-shadow:
-    0 0 15px rgba(171, 245, 0, 0.6),
-    0 0 35px rgba(255, 218, 7, 0.5),
-    0 0 70px rgba(0, 0, 7, 0.4);
-}
+
 
 .barbers-img{
   width: 120px;
@@ -2026,14 +1988,16 @@ input, textarea, select {
 }
 
 .barbers-title{
-   text-align: center;
+  text-align: center;
   font-size: 30px;
   color: #E5E7EB;
   font-weight: bold;
+
+
 }
 
 .barbers-name{
- 
+  margin: 0px;
   text-align: center;
   font-size: 24px;
   color: #E5E7EB;
